microserv-maintenance/src/main/java/org/example/microservmaintenance/error/exception/ScooterMaintenanceException.java
package org.example.microservmaintenance.error.exception;

public class ScooterMaintenanceException extends RuntimeException{

    public ScooterMaintenanceException(String message) {
        super(message);
    }
}
